<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DisplayUserInfoFragment">

    <TextView
        android:id="@+id/showUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        />


    <TextView
        android:id="@+id/showPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/showUserName"
        android:autoLink="phone"/>

    <CheckBox
        android:id="@+id/emailCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/showPhoneNumber"/>

    <TextView
        android:id="@+id/showEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/emailCheckBox"
        android:autoLink="email"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/emptyLine"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text=""
        android:layout_below="@id/emailCheckBox"/>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emptyLine"
        android:layout_alignEnd="@id/homeButton"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="97dp"
        android:text="@string/share"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emptyLine"
        android:layout_alignEnd="@id/showPhoneNumber"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="2dp"
        android:text="@string/home"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="18sp" />

</RelativeLayout>